# nes-emulator

./: .clang-format  CMakeLists.txt  compile_commands.json  main.cpp
roms/nes-test-roms/dpcmletterbox/src/: nes.h
roms/nes-test-roms/m22chrbankingtest/: 0-127.c
roms/nes-test-roms/nes15-1.0.0/bin2pkb/: bin2pkb.c
roms/nes-test-roms/nes15-1.0.0/clib/: binio.c  binio.h  img8.c  img8.h  img8_pcx.c  neschr.c  neschr.h  packbits.c  packbits.h
roms/nes-test-roms/nes15-1.0.0/pcx2chr/: pcx2chr.c
roms/nes-test-roms/nrom368/: neslib.h  test1.c
roms/nes-test-roms/ppu_read_buffer/source/filler/: apacker-filler.cc
roms/nes-test-roms/ppu_read_buffer/source/gfx/: quantize_with_sprites.cc
roms/nes-test-roms/spritecans-2011/src/: musicseq.h  nes.h
roms/nes-test-roms/vaus-test/src/: nes.h  ram.h
src/: Emulator.cpp  Emulator.h  main.cpp
src/core/audio/: AudioProcessingUnit.cpp  AudioProcessingUnit.h
src/core/common/: Peripheral.cpp  Peripheral.h
src/core/cpu/: CPU6502.cpp  CPU6502.h  InstructionSet.h  RegisterSet.cpp  RegisterSet.h
src/core/graphics/: PictureProcessingUnit.cpp  PictureProcessingUnit.h
src/core/log/: Logger.cpp  Logger.h
src/core/mem/: BaseMemory.cpp  BaseMemory.h  Bus.cpp  Bus.h  Memory.cpp  Memory.h  RAM.cpp  RAM.h  ROM.cpp  ROM.h
src/core/utils/: RomLoader.cpp  RomLoader.h
tests/: cpu_tests.cpp
